update main page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,19 +12,20 @@
 
 <body>
 </body>
-<div class="container ">
-
+<div class="container">
+    {{> header}}
 
     <!-- Content -->
     <div class="main_Content">
 
         <div class="intro_image_content">
-            <h1>Hello Group 2 Nha :v </h1>
+            <img src="image/mainBG2.jpg">
         </div>
     </div>
 
     <!-- (End) Content -->
 
+    {{> footer}}
 
 </div>
 
