--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -12,6 +12,9 @@
                                 <a href="../admin">Home </a>
                             </li>                             
                             <li>
+                                <a href="../admin/accountManagement">Account Management </a>
+                            </li> 
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
