update express session

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
     <div class="main_Content">
 
         <div class="intro_image_content">
-            <img src="image/mainBG2.jpg">
+            <img src="">
         </div>
     </div>
 
