--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -10,10 +10,12 @@
                             
                             <li>
                                 <a href="../admin">Home </a>
-                            </li>                             
+                            </li>              
+
                             <li>
-                                <a href="../admin/accountManagement">Account Management </a>
-                            </li> 
+                                <a href="../admin">Account Management </a>
+                            </li>    
+
                             <li>
                                 <a href="../">Logout</a>
                             </li>              
