--- a/views/partial/header.hbs
+++ b/views/partial/header.hbs
@@ -9,7 +9,7 @@
                         <ul>
                             
                             <li>
-                                <a href="../admin">Home </a>
+                                <a href="../">Home </a>
                             </li>                             
                             <li>
                                 <a href="../">Logout</a>
