--- a/views/admin/adminHome.hbs
+++ b/views/admin/adminHome.hbs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Home</title>
-    <link rel="stylesheet" href="css/normal_layout.css" type="text/css">
+    <title>Admin Page</title>
+    <link rel="stylesheet" href="/css/normal_layout.css" type="text/css">
 
 </head>
+
 <body>
-    {{> header}}
+</body>
+<div class="container">
+    {{> headerAdmin}}
 
     <!-- Content -->
     <div class="main_Content">
@@ -22,5 +26,8 @@
     <!-- (End) Content -->
 
     {{> footer}}
-</body>
+
+</div>
+
+
 </html>
