--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -13,7 +13,7 @@
                             </li>              
 
                             <li>
-                                <a href="../admin">Account Management </a>
+                                <a href="../admin/accountManagement">Account Management </a>
                             </li>    
 
                             <li>
