--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -1,6 +1,8 @@
     <!-- Header -->
     <div class="leftSideHeader">
         <div class="greeting ">
+            <img src="/image/collective.png" style="width:45% ; height:100px;"/>
+
             <h1> Idea Collections System </h1>
         </div>
         
