--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -1,7 +1,7 @@
     <!-- Header -->
     <div class="leftSideHeader">
         <div class="greeting ">
-            <img src="/image/collective.png" style="width:45% ; height:100px;"/>
+            <img src="/image/collective.png" style="width:45% ; height:70%;"/>
 
             <h1> Idea Collections System </h1>
         </div>
