--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -1,10 +1,62 @@
-div.main_Content table{
-    width: 40%;
-    height: 30%;
-    margin-top:1%;
-    margin-left: 1%;
+div.top_content {
+    width: 100%;
+    height: 37%;
 }
 
-div.main_Content table form tr{
-    margin-top:2%;
+div.top_content table{
+    width: 40%;
+    height: 75%;
+    margin-top:1%;
+    margin-left: 1%;
+
+}
+div.top_content div.table_title{
+    width: 40%;
+    height: 10%;
+    margin-top:1%;
+    margin-left: 1%;
+
+
+}
+
+div.top_content div.table_title{
+    font-size: 16px;
+    text-align: center;
+    font-family: Courier;
+}
+
+div.top_content div.line_only{
+    width: 40%;
+    height:3%;
+    background-color: #203b5b;
+    margin-left: 1%;
+    margin-top:1%;
+}
+
+div.dropbox select{
+    width: 60%;
+    background-color: #203b5b;
+    border-radius: 3px;
+    padding:6px;
+    color: white;
+    font-size: 10px;
+}
+
+input.accountManagement{
+    width: 70%;
+}
+
+td.accountManagement_title
+{
+    width: 26%;
+    font-size: 14px;
+}
+
+
+
+
+/* =========== Bottom Content =========== */
+div.bottom_content {
+    width: 100%;
+    height: 60%;
 }
