--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,7 +19,7 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"> 
                 <img src="https://cdn-icons-png.flaticon.com/512/1409/1409937.png"> 
             </div>
-            <form  action="../doLogin" method="POST" class="input-group">
+            <form  action="../doLogin" method="post" class="input-group">
                 <input type="text" class="input-field" placeholder="User Id" name="txtUser" required>
                 <input type="text" class="input-field" placeholder="Enter password" name="txtPassword" required>
                 <input type="checkbox" class="check-box"><span>Remember Password</span>
