--- a/views/staff/staffHome.hbs
+++ b/views/staff/staffHome.hbs
@@ -13,7 +13,7 @@
 <body>
 </body>
 <div class="container">
-    {{> header}}
+    {{> headerStaff }}
 
     <!-- Content -->
     <div class="main_Content">
