--- a/views/manager/managerHome.hbs
+++ b/views/manager/managerHome.hbs
@@ -13,7 +13,8 @@
 <body>
 </body>
 <div class="container">
-    {{> header}}
+
+{{>headerManager}}
 
     <!-- Content -->
     <div class="main_Content">
