--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -52,11 +52,39 @@ td.accountManagement_title
     font-size: 14px;
 }
 
+/* =========== Center Content =========== */
 
+div.center_option {
+    width: 100%;
+    height: 4%;
+}
 
+div.center_option button {
+    width: 100px;
+    height: 80%;
+    margin-left: 10px;
+    background-color: #203b5b;
+}
+
+div.center_option button a{
+    text-decoration: none;
+    color: white;
+
+}
+
+div.center_option button:hover{
+    background-color: #fdbe01;
+
+}
 
 /* =========== Bottom Content =========== */
 div.bottom_content {
     width: 100%;
-    height: 60%;
+    height: 56%;
+    overflow-y: auto;
 }
+
+div.bottom_content table {
+    width: 100%;
+}
+
