--- a/views/admin/accountManagement.hbs
+++ b/views/admin/accountManagement.hbs
@@ -133,7 +133,7 @@
 
                                     <td>
                                             <button>
-                                                <a href="../admin/updateStaffAccount?id={{_id}}">
+                                                <a href="../admin/updateAccount?id={{_id}}">
                                                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Edit_icon_%28the_Noun_Project_30184%29.svg/1024px-Edit_icon_%28the_Noun_Project_30184%29.svg.png"
                                                     width="18" height="18" alt="">
                                                     Update
