--- a/views/staff/submit.hbs
+++ b/views/staff/submit.hbs
@@ -49,7 +49,7 @@
                         <input type="file" name="myfile" />
                         <br/>
                         <br/>
-                        <input type="submit" value="Upload Image" name="submit">
+                        <input type="submit" value="Submit" name="submit">
                         <br/>
                         <br/>
                         <span id="status"></span>
