--- a/views/staff/submit.hbs
+++ b/views/staff/submit.hbs
@@ -44,7 +44,8 @@
 
                 <table>
 
-                    <form id="uploadForm" enctype="multipart/form-data" action="/upload" method="post" onsubmit="if(document.getElementById('agree').checked) { return true; }
+                    <form id="uploadForm" enctype="multipart/form-data" action="/staff/upload" method="post" 
+                    onsubmit="if(document.getElementById('agree').checked) { return true; }
                             else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
 
                         <input type="file" name="myfile" />
