--- a/views/staff/submit.hbs
+++ b/views/staff/submit.hbs
@@ -44,17 +44,15 @@
 
                 <table>
 
-                    <form id="uploadForm" enctype="multipart/form-data" action="/staff/upload" method="post" 
-                    onsubmit="if(document.getElementById('agree').checked) { return true; }
-                            else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
-
+                    <form id="uploadForm" enctype="multipart/form-data" action="/staff/upload" method="post" >
+                    
                         <input type="file" name="myfile" />
                         <br/>
                         <br/>
                             <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions and Privacy Policy
                             <br/>
                             <br/>
-                            <input type="submit" value="Submit" name="submit">
+                            <input type="submit" value="Submit" name="submit" onclick="if(!this.form.checkbox.checked){alert('You must agree to the terms first.');return false}">
                         <br/>
                         <br/>
                         <span id="status"></span>
