--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -116,3 +116,26 @@ div.top_content_updateFunc table {
     width: 40%;
     height: 40%;
 }
+
+
+/* =========== Post Idea Management Page =========== */
+div.ideaManagement {
+    width: 100%;
+    height: 90%;
+    overflow-y: auto;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+div.ideaManagement table{
+    width: 100%;
+}
+
+div.table_title_idea {
+    width: 100%;
+    margin-left: 1%;
+    font-size: 16px;
+    font-family: Courier;
+    /* text-align: center;
+     */
+}
