--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -19,6 +19,10 @@
                             </li>    
 
                             <li>
+                                <a href="../admin/postIdeaManagement">Post Idea Management </a>
+                            </li>  
+
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
