update submit cate

--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -17,6 +17,9 @@
                             <li>
                                 <a href="../staff/submit">Submit File</a>
                             </li>    
+                            <li>
+                                <a href="../staff/allFileSubmit">All File Submit</a>
+                            </li>
 
                             <li>
                                 <a href="../">Logout</a>
