--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -17,7 +17,9 @@
                             <li>
                                 <a href="../staff/submit">Submit File</a>
                             </li>    
-
+                            <li>
+                                <a href="../staff/viewAll">Idea</a>
+                            </li>
                             <li>
                                 <a href="../">Logout</a>
                             </li>              
