--- a/public/css/seeIdea.css
+++ b/public/css/seeIdea.css
@@ -85,11 +85,87 @@ div.main_Content div.intro_image_content img{
     border-top-right-radius: 10px;
 }
 div.box{
+    border:1px solid black;
+    padding:10px;
+    margin: auto;
+    width: 70%;
+    height: 20%;
+    white-space: nowrap;
+    border-radius: 20px;
+}
+div.box div.inside{
+    padding: 0.5rem 0;
+}
+div.padding{
     height: 3.5rem;
     padding-right: 0.5rem;
     white-space: nowrap;
 }
+div.align{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
 
+img.size:first-child{
+    margin-left: 1.5rem;
+}
+img.size{
+    align-self: center;
+    height: 2.5rem;
+    margin: 0 1rem;
+    width: 2.5rem;
+}
+img.border{
+    border-radius: 50%;
+    flex-shrink: 0;
+    max-height: 75px;
+    max-width: 75px;
+    vertical-align: middle;
+}
+div.span{
+    overflow: hidden;
+}
+div.box div.name1{
+    letter-spacing: .01428571em;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+    color: #3c4043;
+}
+div.name2{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
+span.font{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: block;
+}
+span.space{
+    letter-spacing: .01785714em;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.25rem;
+    color: #3c4043;
+}
+span.email{
+    letter-spacing: .025em;
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1rem;
+    color: #5f6368;
+}
+div.box div.content{
+    padding: 0 1.5rem;
+}
+div.box div.inside-content{
+    display: block;
+    overflow: hidden;
+    overflow-wrap: break-word;
+}
 /*=============================== Footer ===============================*/
 div.footer {
     width: 100%;
