--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -21,6 +21,9 @@
                                 <a href="../staff/viewAll">All File Submit</a>
                             </li>
                             <li>
+                                <a href="../staff/allFileSubmit">Test</a>
+                            </li>
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
