--- a/views/staff/submit.hbs
+++ b/views/staff/submit.hbs
@@ -46,16 +46,17 @@
 
                     <form id="uploadForm" enctype="multipart/form-data" action="/staff/upload" method="post" >
                     
-                        <input type="file" name="myfile" />
+                        <tr><input type="file" name="myfile" /></tr>
                         <br/>
                         <br/>
-                            <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions and Privacy Policy
+                        <tr>  <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions and Privacy Policy</tr>
                             <br/>
                             <br/>
                             <input type="submit" value="Submit" name="submit" onclick="if(!this.form.checkbox.checked){alert('You must agree to the terms first.');return false}">
                         <br/>
                         <br/>
-                        <span id="status"></span>
+                        
+                        
                     </form>
                 </table>
 
