update staff func

--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -34,14 +34,14 @@
                         <tr>                                            
                             <td>Start Date : </td>
                             <td>
-                                <input type="date" name="txtStartDat"  value="{{startDate}}"> 
+                                <input type="date" name="txtStartDat"> 
                             </td> 
                             <td style="color: brown;">{{errorMessage}}</td>
                         </tr>
                         <tr>
                             <td>End Date : </td>
                             <td>
-                                <input type="date" name="txtEndDate" value="{{endDate}}">
+                                <input type="date" name="txtEndDate">
                             </td>
                             <td  style="color: brown;">{{errorMessage}}</td>
                         </tr> 
@@ -58,7 +58,7 @@
                         </tr>
                         <tr>
                             <td class="accountManagement_title">File : </td>
-                            <td><input type="text" class="accountManagement" name="txtNewCate"> </td> 
+                            <td><input type="text" class="accountManagement" name="txtNewFile"> </td> 
                         </tr>
                         <tr>
                             <td></td>
