update staff func

--- a/views/admin/postIdeaManagement.hbs
+++ b/views/admin/postIdeaManagement.hbs
@@ -40,7 +40,7 @@
                                     <td>{{description}}</td>
                                     <td>{{startDate}}</td>
                                     <td>{{endDate}}</td>
-                                    <td>{{categories}}</td>
+                                    <td>{{category}}</td>
                                     <td>{{users}}</td>
                                     <td>{{email}}</td>
                                 
