--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -23,6 +23,10 @@
                             </li>  
 
                             <li>
+                                <a href="../admin/testPagination">Test Pagination</a>
+                            </li>  
+
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
