--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -74,7 +74,7 @@
                         </tr>
                         <tr>
                             <td class="accountManagement_title">User : </td>
-                            <td> {{getUser.name}}</td>
+                            <td name = "txtUserName"> {{getUser.name}}</td>
                         </tr>
                         <tr>
                             <td></td>
