--- a/views/partial/headerManager.hbs
+++ b/views/partial/headerManager.hbs
@@ -15,7 +15,7 @@
                             </li>              
 
                             <li>
-                                <a href="../manager/addCategory">Add new category</a>
+                                <a href="../manager/addCategory">Category Management</a>
                             </li>    
 
                             <li>
