--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -23,7 +23,7 @@
                             </li>  
 
                             <li>
-                                <a href="../admin/testPagination">Test Pagination</a>
+                                <a href="../admin/availableUsers">Available Users</a>
                             </li>  
 
                             <li>
